# jass

./: README.md  pyproject.toml  run_jass.bat  run_jass.py
src/jass_chibre/: __init__.py  bots.py  engine.py  model.py  rules.py  webapp.py
tests/: test_rules.py
