[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jass-chibre"
version = "0.1.0"
description = "Moteur de règles pour le Jass suisse variante Chibre romand"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
